2012-09-17 dschulze@adobe.com
	'mask-type' just applies to mask element.
	Define border-box and content-box for SVG.
	Add mask type values to 'mask-image'.

2012-09-05 dschulze@adobe.com
	Added new editors Tab Atkins and Dirk Schulze to CSS Masking.

2012-08-29 dschulze@adobe.com
	Removed 'mask-attachment' for now and updated issues to match resolutions of CSS WG.

2012-08-20 dschulze@adobe.com
	Fixed some links.

2012-08-20 dschulze@adobe.com
	Add introduction for 'mask-box-image'.

2012-08-20 dschulze@adobe.com
	Allow <shape>, child and select() values for 'clip-path'.

2012-08-15 dschulze@adobe.com
	Added issues that feature need to be proofed for 'mask-attachment', 'mask-origin' and 'mask-clip'
	Replaced more PNG images with SVG

2012-08-14 dschulze@adobe.com
	Added example for 'mask-box-image'

2012-08-14 dschulze@adobe.com
	Add new example of masking in the intro.

2012-08-13 dschulze@adobe.com
	Add 'mask-box-image' property descriptions.
	Changed intitial values of 'mask-box-image' properties to match WebKit.

2012-08-13 dschulze@adobe.com
	Add 'mask-box-image' properties, description follows.
	Changed pseudo-stacking-context to stacking context.

2012-08-12 dschulze@adobe.com
	Add 'clip-path' to specification uppen a request of the SVG WG.

2012-08-12 dschulze@adobe.com
	Created new sections for Mask and Mask Box Image.

2012-08-12 dschulze@adobe.com
	Added more images.

2012-08-12 dschulze@adobe.com
	More clarification on used terms.

2012-08-11 dschulze@adobe.com
	Changed syntax for 'mask' and other properties to fit initial intention.

2012-08-11 dschulze@adobe.com
	Added 'The Masking Rendering Model' section.

2012-08-11 dschulze@adobe.com
	Mask sources can not be stacked to a mask layer.

2012-08-11 dschulze@adobe.com
    Make 'mask' shorthand property.

2012-08-11 dschulze@adobe.com
    Fixed typo on 'mask-origin'.

2012-08-11 dschulze@adobe.com
    Added 'mask-origin'.

2012-08-11 dschulze@adobe.com