@@ -1,3 +1,9 @@
+2012-09-19 dschulze@adobe.com
+	Fxed typos.
+	Made correction on syntax for 'mask-image'. Compatible to WebKit again.
+	Updated descripton of 'mask-type'.
+	Added issues about used bording boxes as discussed with SVG WG.
+
 2012-09-17 dschulze@adobe.com
 	'mask-type' just applies to mask element.
 	Define border-box and content-box for SVG.
